# drorm

./: Cargo.toml  changelog.txt  deny.toml
.github/workflows/: linux.yml  macos.yml  windows.yml
example-forum-server/: Cargo.toml  README.md
example-forum-server/src/: lib.rs  main.rs  test.rs
example-forum-server/src/handler/: mod.rs  thread.rs  user.rs
example-forum-server/src/models/: mod.rs  post.rs  stars.rs  thread.rs  thumb.rs  user.rs
example-forum-server/tests/: example_forum_server.rs
fancy-const/src/: functions.rs  lib.rs  main.rs
rorm-macro/: Cargo.toml  build.rs
rorm-macro-impl/: Cargo.toml
rorm-macro-impl/src/: lib.rs  utils.rs
rorm-macro-impl/src/analyze/: mod.rs  model.rs
rorm-macro-impl/src/generate/: db_enum.rs  mod.rs  model.rs  patch.rs  utils.rs
rorm-macro-impl/src/parse/: annotations.rs  model.rs  patch.rs
rorm-macro-impl/tests/: derives.rs  run_derives.rs
rorm-macro-impl/tests/derive_db_enum/inputs/: basic.rs
rorm-macro-impl/tests/derive_db_enum/outputs/: basic.rs
rorm-macro-impl/tests/derive_model/inputs/: basic.rs  experimental_unregistered.rs  generic.rs
rorm-macro-impl/tests/derive_model/outputs/: basic.rs  experimental_unregistered.rs  generic.rs
rorm-macro-impl/tests/derive_patch/inputs/: basic.rs
rorm-macro-impl/tests/derive_patch/outputs/: basic.rs
rorm-macro/src/: lib.rs
rorm-macro/src/analyze/: model.rs
rorm-macro/src/generate/: db_enum.rs  model.rs
src/: dump.rs  lib.rs  model.rs  new.rs
src/conditions/: collections.rs  in.rs  mod.rs
src/crud/: builder.rs  decoder.rs  delete.rs  insert.rs  query.rs  selector.rs  update.rs
src/fields/: const_fns.rs  mod.rs  proxy.rs
src/fields/traits/: aggregate.rs  cmp.rs  mod.rs
src/fields/types/: back_ref.rs  chrono.rs  foreign_model.rs  json.rs  max_str.rs  max_str_impl.rs  msgpack.rs  postgres_only.rs  std.rs  time.rs  url.rs  uuid.rs
src/fields/utils/: check.rs  const_fn.rs  get_annotations.rs  get_names.rs  mod.rs
src/internal/: const_concat.rs  djb2.rs  mod.rs  query_context.rs  relation_path.rs
src/internal/field/: access.rs  as_db_type.rs  decoder.rs  fake_field.rs  foreign_model.rs  mod.rs  modifier.rs
src/internal/hmr/: annotations.rs  db_type.rs  mod.rs
src/internal/query_context/: flat_conditions.rs  ids.rs  mod.rs
src/internal/relation_path/: impls.rs  mod.rs
tests/: derives.rs
tests/data/derives/: basic.rs  experimental.rs
tests/data/derives/basic_expansions/: BasicEnum.rs  BasicModel.rs  BasicPatch.rs
tests/data/derives/experimental_expansions/: Generic.rs  Unregistered.rs
