[package]
name = "example-forum-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "~0.7", features = ["macros"] }
tokio = { version = "~1", features = ["full"] }
rorm = { path = "..", features = ["cli"] }
clap = { version = "~4", features = ["derive"] }
anyhow = "~1"
log = { version = "~0.4" }
env_logger = { version = "~0.11" }
serde = { version = "~1", features = ["derive"] }
serde_json = "~1"
time = "~0.3"
uuid = { version = "~1", features = ["v4", "serde"] }
tower-sessions = "~0.12"
futures-util = "0.3.30"