[package]
name = "rorm-macro-impl"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/rorm-orm/rorm"
authors = ["gammelalf", "myOmikron <git@omikron.dev>"]
categories = ["database"]
keywords = ["declarative", "orm", "database", "macros"]
homepage = "https://rorm.rs"
documentation = "https://docs.rorm.rs"
license = "MIT"
description = "Macro implementations for rorm."

[dependencies]
# syn builds rust syntax trees from strings or tokenstream
syn = { version = "~2", features = ["full", "visit-mut"] }
# quote provides a macro to write rust code with template variables which then produces a tokenstream
quote = { version = "~1" }
# a higher level wrapper for rust's proc-macro which is used by syn and quote
proc-macro2 = { version = "~1" }
# for simple parsing of attributes
darling = { version = "~0.20" }
